// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionMessage /> renders AddKey with permission FullAccess 1`] = `
Array [
  "New key added for ",
  <span
    onClick={[Function]}
  >
    <a
      className="account-link"
      href="/accounts/receiver.test"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      receiver.test
    </a>
  </span>,
  <style>
    
        .account-link {
          white-space: nowrap;
        }
      
  </style>,
  ": ed25519:BgXFiJS...",
  <p>
    with permission FullAccess
  </p>,
]
`;

exports[`<ActionMessage /> renders AddKey with permission function call to call any method 1`] = `
Array [
  "Access key added for contract ",
  <span
    onClick={[Function]}
  >
    <a
      className="account-link"
      href="/accounts/stake"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      stake
    </a>
  </span>,
  <style>
    
        .account-link {
          white-space: nowrap;
        }
      
  </style>,
  ": ed25519:BgXFiJS...",
  <p>
    with permission to call any methods
  </p>,
]
`;

exports[`<ActionMessage /> renders AddKey with permission function call to call specific methods 1`] = `
Array [
  "Access key added for contract ",
  <span
    onClick={[Function]}
  >
    <a
      className="account-link"
      href="/accounts/stake"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      stake
    </a>
  </span>,
  <style>
    
        .account-link {
          white-space: nowrap;
        }
      
  </style>,
  ": ed25519:BgXFiJS...",
  <p>
    with permission to call (add_request, delete_request, confirm, add_request_and_confirm) methods
  </p>,
]
`;

exports[`<ActionMessage /> renders CreateAccount 1`] = `
Array [
  "New account created: ",
  <span
    onClick={[Function]}
  >
    <a
      className="account-link"
      href="/accounts/receiver.test"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      receiver.test
    </a>
  </span>,
  <style>
    
        .account-link {
          white-space: nowrap;
        }
      
  </style>,
]
`;

exports[`<ActionMessage /> renders DeleteAccount 1`] = `
Array [
  "Delete account ",
  <span
    onClick={[Function]}
  >
    <a
      className="account-link"
      href="/accounts/receiver.test"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      receiver.test
    </a>
  </span>,
  <style>
    
        .account-link {
          white-space: nowrap;
        }
      
  </style>,
  " and transfer remaining funds to ",
  <span
    onClick={[Function]}
  >
    <a
      className="account-link"
      href="/accounts/near"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      near
    </a>
  </span>,
  <style>
    
        .account-link {
          white-space: nowrap;
        }
      
  </style>,
]
`;

exports[`<ActionMessage /> renders DeleteKey 1`] = `"Key deleted: ed25519:BgXFiJS..."`;

exports[`<ActionMessage /> renders DeployContract 1`] = `
Array [
  "Contract deployed: ",
  <span
    onClick={[Function]}
  >
    <a
      className="account-link"
      href="/accounts/receiver.test"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      receiver.test
    </a>
  </span>,
  <style>
    
        .account-link {
          white-space: nowrap;
        }
      
  </style>,
]
`;

exports[`<ActionMessage /> renders FunctionCall 1`] = `
Array [
  "Called method: 'method_name' in contract: ",
  <span
    onClick={[Function]}
  >
    <a
      className="account-link"
      href="/accounts/receiver.test"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      receiver.test
    </a>
  </span>,
  <style>
    
        .account-link {
          white-space: nowrap;
        }
      
  </style>,
]
`;

exports[`<ActionMessage /> renders FunctionCall with details 1`] = `
Array [
  "Called method: 'method_name' in contract: ",
  <span
    onClick={[Function]}
  >
    <a
      className="account-link"
      href="/accounts/receiver2.test"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      receiver2.test
    </a>
  </span>,
  <style>
    
        .account-link {
          white-space: nowrap;
        }
      
  </style>,
  <dl>
    <dt>
      Arguments:
    </dt>
    <dd>
      <div>
        <div
          style={
            Object {
              "display": "block",
              "height": "0px",
              "overflow": "hidden",
            }
          }
        >
          <textarea
            className="code-preview"
            readOnly={true}
            value="{
  \\"text\\": \\"when ico?\\"
}"
          />
        </div>
        <div
          onClick={[Function]}
        >
          <div
            style={
              Object {
                "float": "left",
              }
            }
          >
            Show more
          </div>
        </div>
      </div>
      <style>
        
        @import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap");
        .code-preview {
          font-family: "Source Code Pro", monospace;
          background: #424957;
          color: white;
          padding: 20px;
          width: 100%;
          height: 99%;
        }
      
      </style>
    </dd>
  </dl>,
]
`;

exports[`<ActionMessage /> renders Stake 1`] = `
Array [
  "Staked: ",
  <span
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    &lt;0.00001
     
    Ⓝ
  </span>,
  " ",
  "with ed25519:BgXFiJS...",
]
`;

exports[`<ActionMessage /> renders Transfer 1`] = `
Array [
  "Transferred ",
  <span
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    &lt;0.00001
     
    Ⓝ
  </span>,
  " to ",
  <span
    onClick={[Function]}
  >
    <a
      className="account-link"
      href="/accounts/receiver.test"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      receiver.test
    </a>
  </span>,
  <style>
    
        .account-link {
          white-space: nowrap;
        }
      
  </style>,
]
`;
